--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dotenv": "8.2.0",
     "kcors": "2.2.2",
     "koa": "2.13.0",
-    "koa-router": "9.4.0"
+    "koa-router": "9.4.0",
+    "pg": "8.4.0"
   }
 }
